--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,6 +1,6 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
-:revnumber: 0.1.0-dev.11+20190412
+:revnumber: 0.1.0-dev.12+20190415
 :version-label: Version de edition digital:
 :lang: ie
 :docinfo: private
@@ -20,7 +20,7 @@ endif::[]
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201904122115
+// Last modified 201904151736
 
 :dot: .
 
@@ -132,7 +132,7 @@ fissura e audaciat mem penetrar in li dangerosi grottes, u ja pluri homes
 perdit li via e poy cadet in alcun precipitie e ruptet li nuc.
 
 In su biblioteca on trovat un pelmel atestant li manca de un metode in li
-selection li selection de letura. On posset trovar ta libres de Clifton, de
+selection de letura. On posset trovar ta libres de Clifton, de
 Karl May, de Verne, de Emerson, libres naturscientic, historic, filosofic,
 theologic, politic e linguistic. Il leet omnicos venient in su manus, ma poy il
 ha fixat se a libres filosofic e linguistic.
@@ -151,7 +151,7 @@ almen hodíe.`"
 
 "`Eh, quo posse incontrar me? Yo es ya caut. Li forestes yo conosse bon
 e hodie es just li max oportun tempe. It prepara se a un storm e li
-gardaforestes va esser celat. Esse si cuida. Adio matre, dormí bon.`" E
+gardaforestes va esser celat. Esse sin cuida. Adio matre, dormí bon.`" E
 Ondra surtit ex li domette con li fusil celat sub li mantel.
 
 Pro cautie il braconat solmen in li forestes plu distant. Pos un hor de
@@ -216,14 +216,14 @@ Li juvena ductet le tra zigzagant coridores quel strax astrettat se talmen
 que on posset solmen con pena passar tra ili, strax ili elargat se in magnific
 temples ornat de milliones de annus per fabulosi figuras de stalactites. Ti
 spectacul tentat Ondra a haltar e revar pri li marveles e miracules del natura.
-Ma li quida fortiat le avansar, assertente le que existe mem plu bell temples in
+Ma li guida fortiat le avansar, assertente le que existe mem plu bell temples in
 su patria.
 
 Li juvena babilla, questiona e talmen Ondra aprende que ella es Krasina,
 filia del chef del Slavines queles vive sur li rive de un fluvie.
 
 Ondra ja ha perceptet li murmura del fluvie e sones de canzon in li lingue
-de su quida. Quande ili aproximat se, salutat les un grand bruida. It semblat
+de su guida. Quande ili aproximat se, salutat les un grand bruida. It semblat
 que li trumpetada ye cornes de uros e li tamburada ne va haver li fine. Ma
 quande se levat un oldo, omni silentat se. Krasina chuchotat a Ondra: "`To
 es mi patre.`"
@@ -570,7 +570,7 @@ casus ples memorar que it ne es fat con intention, ma solmen de ínconossentie.
 Quo yo posse promesser vos, es lu sequent: Li tot amore quel mi cordie es
 capabil, yo va dar a mi popul. Omni conossenties queles yo ha aquisitet supra,
 yo vole dar vos. Yo va efortiar que almen parte del aquisitiones del modern
-tempe, queles li homanité súper nos usa, deveni anc vor proprietá. Yo es pret
+témpore, queles li homanité súper nos usa, deveni anc vor proprietá. Yo es pret
 viver e morir por vos.`"
 
 Ti alocution, benque fat in defectos lingue de Slavines, evocat un grand
@@ -604,7 +604,7 @@ Ondra.
 
 Ondra ha prendet un carbon e scrit sur un lapid: "`Valdomir`" e poy
 descomposit li parol in singul litteres e denove juntet li sylabes til que omni
-ha capit li miracul. Poy il ha invitat Valdomir a scrir self sui nomine. Ti
+ha capit li miracul. Poy il ha invitat Valdomir a scrir self su nomine. Ti
 procedura esset penibil, ma tamen li old chef ha successat con grand joy. Poy
 Ondra scrit li nomines comensant per V, A, L, D etc. Chascun esset fieri que in
 li unesim lecion il ha aprendet scrir su nomine.
@@ -679,7 +679,7 @@ juntion de lu bon (li amore) con lu ver (li sagesse). Li fémina representa li
 principie del amore e li mann li principie del sagesse. Noi save que li amore
 es figurat in li fysic munde per calore e li veritá per luce. Li tot vive es
 conditionat per calore e luce, ergo per amore e sagesse. Sin li amore e sagesse
-li ver matrimonie es inpossibil sammen quam li fysic vie es inpossibil sin li
+li ver matrimonie es inpossibil sammen quam li fysic vive es inpossibil sin li
 calore e luce.`"
 
 "`Yo deve confesser que yo nequande serchat un tal profundore in li
@@ -698,7 +698,7 @@ Che nos existe quelc principal religiones e chascun have quelc sectes.`"
 "`Noi crede, ma chascun eclesie explica Le altrimen. Ma pri to yo va
 parlar altrivez. In ti ci media, precipue in ti ci miracules del natura, plu
 bon incade tui religion. Damage, que yo ancor ne ha penetrat in vor symbolica
-por posser leer in tri ci temple, quo ha scrit li natura durant millennies e
+por posser leer in ti ci temple, quo ha scrit li natura durant millennies e
 scri ancor hodie.`"
 
 "`Tu deve petir mi patre, il posse explicar te omnicos. Il es versat anc
@@ -859,7 +859,7 @@ grand interesse, ma poy il tornat li cap e dit: "`No, amíco, tam long null
 popul vell posser viver sin li sole. It esset solmen un somnie. Forsan un bell
 somnie, ma tamen solmen un somnie.`"
 
-"`Ma qualmen on posse somniar pri tam logic religion del Slavine? Li
+"`Ma qualmen on posse somniar pri tam logic religion del Slavines? Li
 somnies es ja sempre caotic.`"
 
 "`Forsan vu ha leet alquó del sved scientist e theolog Swedenborg. Il ha
